getItem without created hook

--- a/project1/index.html
+++ b/project1/index.html
@@ -13,6 +13,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
     <div id="notebook">
+        <aside class="side-bar">
+            
+        </aside>
         <section class="main">
             <textarea v-model="content" cols="100" rows="10"></textarea>
         </section>
