--- a/project1/index.html
+++ b/project1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css"/>
     <title>My Notebook</title>
 </head>
@@ -14,7 +15,9 @@
 
     <div id="notebook">
         <aside class="side-bar">
-            
+            <div class="toolbar">
+                <button v-bind:title="notes.length + ' items already exists.'" v-on:click="addNote"><i class="fas fa-plus"></i></button>
+            </div>
         </aside>
         <section class="main">
             <textarea v-model="content" cols="100" rows="10"></textarea>
