display creation time of the notes

--- a/project1/index.html
+++ b/project1/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.6.1/marked.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
     <div id="notebook">
@@ -39,7 +40,13 @@
                 <input type="text" placeholder="Note Title!" v-model="selectedNote.title"/>
                 <button class="btn btn-light" title="Make it Favorite" v-on:click="favoriteNote"><i :class="selectedNote.favorite ? 'fas': 'far'" class="fa-star"></i>Favorite</button>
                 <button class="btn btn-danger" title="Delete Note" v-on:click="removeNote"><i class="fas fa-trash"></i>Delete Note</button>
-                <textarea v-model="selectedNote.content"></textarea>        
+                <textarea v-model="selectedNote.content"></textarea>   
+                <div class="toolbar status-bar">
+                    <span class="date">
+                        <span><label class="label">Created</label></span>
+                        <span><label class="value">{{selectedNote.created | date}}</label></span>
+                    </span>
+                </div>     
             </section>
             <aside class="preview" v-html="notePreview">
             </aside>
