display lines, words and characters

--- a/project1/index.html
+++ b/project1/index.html
@@ -46,6 +46,18 @@
                         <span><label class="label">Created</label></span>
                         <span><label class="value">{{selectedNote.created | date}}</label></span>
                     </span>
+                    <span class="lines">
+                    <span class="label">Lines</span>
+                    <span class="value">{{ linesCount }}</span>
+                    </span>
+                    <span class="words">
+                    <span class="label">Words</span>
+                    <span class="value">{{ wordsCount }}</span>
+                    </span>
+                    <span class="characters">
+                    <span class="label">Characters</span>
+                    <span class="value">{{ charactersCount }}</span>
+                    </span>
                 </div>     
             </section>
             <aside class="preview" v-html="notePreview">
