defining and using the component

--- a/project2/index.html
+++ b/project2/index.html
@@ -20,6 +20,7 @@
   <script src="utils.js"></script>
   <script src="cards.js"></script>
   <script src="state.js"></script>
+  <script src="components/ui.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
