--- a/project2/index.html
+++ b/project2/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Include the library in the page -->
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <!-- This library will be useful for animations -->
   <script src="https://unpkg.com/tween.js"></script>
 
