looping a element multiple time - 1

--- a/cookbook/getting_started/index.html
+++ b/cookbook/getting_started/index.html
@@ -9,9 +9,11 @@
 <body>
     <div id="app">
         <ul>
-            <li v-for="n in 4">
-                {{msg}}
+            <li v-for="n in 10">
+                {{11 - n}}
+                
             </li>
+            <li>Launch missile</li>
         </ul>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
