looping a element multiple time using array in HTML markup

--- a/cookbook/getting_started/index.html
+++ b/cookbook/getting_started/index.html
@@ -9,9 +9,8 @@
 <body>
     <div id="app">
         <ul>
-            <li v-for="n in 10">
-                {{11 - n}}
-                
+            <li v-for="n in [10,9,8,7,6,5,4,3,2,1]">
+                {{n}}                
             </li>
             <li>Launch missile</li>
         </ul>
